Написал документацию для ручек чатов и сообщений
